--- a/package.json
+++ b/package.json
@@ -6,23 +6,20 @@
   ],
   "scripts": {
     "lint": "eslint packages/*/{src,test}",
-    "pretest": "npm run build",
-    "test-only": "lerna run --parallel test",
-    "test": "npm run test-only",
-    "check": "run-s lint test",
+    "test": "lerna run --parallel test",
     "clean": "lerna run --parallel clean && lerna clean --yes && rimraf node_modules",
-    "build": "lerna run build",
-    "counter": "npm run start --prefix examples/counter",
-    "error-demo": "npm run start --prefix examples/error-demo",
-    "cancellable-counter": "npm run start --prefix examples/cancellable-counter",
-    "shop": "npm run start --prefix examples/shopping-cart",
-    "async": "npm run start --prefix examples/async",
-    "real-world": "npm run start --prefix examples/real-world",
+    "build": "lerna run --parallel build",
+    "counter": "yarn start --prefix examples/counter",
+    "error-demo": "yarn start --prefix examples/error-demo",
+    "cancellable-counter": "yarn start --prefix examples/cancellable-counter",
+    "shop": "yarn start --prefix examples/shopping-cart",
+    "async": "yarn start --prefix examples/async",
+    "real-world": "yarn start --prefix examples/real-world",
     "docs:clean": "rimraf _book",
     "docs:prepare": "gitbook install",
-    "docs:build": "npm run docs:prepare && gitbook build -g redux-saga/redux-saga",
-    "docs:watch": "npm run docs:prepare && gitbook serve",
-    "docs:publish": "npm run docs:clean && npm run docs:build && cp CNAME _book && touch _book/.nojekyll && gh-pages -d _book -r git@github.com:redux-saga/redux-saga.git -m 'update book' -t",
+    "docs:build": "yarn docs:prepare && gitbook build -g redux-saga/redux-saga",
+    "docs:watch": "yarn docs:prepare && gitbook serve",
+    "docs:publish": "yarn docs:clean && yarn docs:build && cp CNAME _book && touch _book/.nojekyll && gh-pages -d _book -r git@github.com:redux-saga/redux-saga.git -m 'update book' -t",
     "bundlesize": "lerna run --parallel bundlesize"
   },
   "repository": {
@@ -57,7 +54,7 @@
     "babel-eslint": "^8.2.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "bundlesize": "^0.11.0",
+    "bundlesize": "^0.18.0",
     "cross-env": "^6.0.3",
     "eslint": "^4.17.0",
     "eslint-plugin-react": "^7.16.0",
