--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,16 +10,14 @@
     "types"
   ],
   "scripts": {
-    "test": "npm run test:types && npm run test:jest",
+    "test": "yarn test:types && yarn test:jest",
     "test:jest": "jest",
     "test:types": "dtslint types",
-    "prebundlesize": "npm run build",
-    "bundlesize": "bundlesize",
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn clean",
     "build": "rollup -c",
     "postbuild": "node ./scripts/createProxyCjsEntries.js",
-    "prepare": "npm run build",
+    "prepare": "yarn build",
     "preversion": "npm test"
   },
   "repository": "https://github.com/redux-saga/redux-saga/tree/master/packages/core",
@@ -60,7 +58,6 @@
     "@babel/preset-env": "^7.6.3",
     "babel-7-jest": "^21.3.3",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "bundlesize": "^0.11.0",
     "dtslint": "^0.9.0",
     "jest": "^23.5.0",
     "lerna-alias": "^3.0.2",
