--- a/packages/simple-saga-monitor/package.json
+++ b/packages/simple-saga-monitor/package.json
@@ -9,9 +9,9 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn clean",
     "build": "rollup -c",
-    "prepare": "npm run build"
+    "prepare": "yarn build"
   },
   "repository": "https://github.com/redux-saga/redux-saga/tree/master/packages/simple-saga-monitor",
   "keywords": [
